Fixed code alignment and css issues

--- a/src/App.css
+++ b/src/App.css
@@ -22,3 +22,46 @@
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
 }
+
+/* use css to set position of modal */
+.vertical-center-modal {
+  text-align: center;
+  white-space: nowrap;
+}
+
+.vertical-center-modal:before {
+  content: '';
+  display: inline-block;
+  height: 100%;
+  vertical-align: middle;
+  width: 0;
+}
+
+.vertical-center-modal .ant-modal {
+  display: inline-block;
+  vertical-align: middle;
+  top: 0;
+  text-align: left;
+}
+
+/** Label **/
+.label__input {
+  margin-bottom: 10px;
+}
+
+.ant-input {
+  width: 200px;
+}
+
+.label__textarea {
+  width: 300px;
+  margin-bottom: 10px;
+}
+
+.label__title {
+  font-size: 15px;
+}
+
+.label__textarea-title {
+  line-height: 28px;
+}
